System working appart from Handoff-Metadata update race condition